--- a/Soil_Fertility_Prediction.ipynb
+++ b/Soil_Fertility_Prediction.ipynb
@@ -10,8 +10,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**1)** Se va a instalar la librería openpyxl"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -28,8 +35,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "2) Se j"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "EHkgrJlA-fiJ"
       },
@@ -52,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -458,7 +472,7 @@
               "[422 rows x 25 columns]"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -482,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -641,7 +655,7 @@
               "4  0.1  1  4.7  0.5   0.1  "
             ]
           },
-          "execution_count": 7,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -672,7 +686,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -702,7 +716,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -713,7 +727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -727,7 +741,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_6285/2263177.py:1: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+            "/tmp/ipykernel_6447/2263177.py:1: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
             "  soil_data.fillna(0)\n"
           ]
         },
@@ -1003,7 +1017,7 @@
               "[408 rows x 15 columns]"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1014,7 +1028,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1044,7 +1058,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1074,7 +1088,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1095,7 +1109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "metadata": {
         "id": "NBRo6k_yZr5E"
       },
@@ -1106,7 +1120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1146,7 +1160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1195,7 +1209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1241,7 +1255,7 @@
               "<Axes: >"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1305,7 +1319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1412,7 +1426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 15,
       "metadata": {
         "id": "irT96MsqkeHr"
       },
@@ -1457,7 +1471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1498,7 +1512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
