--- a/Soil_Fertility_Prediction.ipynb
+++ b/Soil_Fertility_Prediction.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -31,6 +31,7 @@
         }
       ],
       "source": [
+        "#1\n",
         "!pip install openpyxl"
       ]
     },
@@ -38,17 +39,23 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "2) Se j"
+        "2) Se instalaran las siguientes libreriras\n",
+        "\n",
+        "- numpy: Trabajar con arreglos y operaciones numéricas.\n",
+        "- pandas: Manejar tablas y análisis de datos.\n",
+        "- matplotlib.pyplot: Para hacer gráficos.\n",
+        "- pickle: Guarda y carga objetos de Python en archivos."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "EHkgrJlA-fiJ"
       },
       "outputs": [],
       "source": [
+        "#2\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -65,8 +72,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**3)** Lee un archivo Excel y lo carga en un DataFrame llamado soil_data SIN TÍTULO"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -478,10 +492,9 @@
         }
       ],
       "source": [
-        "# reading data from excel sheet\n",
+        "#3\n",
         "soil_data = pd.read_excel('/workspaces/evaluacion-final-u2-ml/soil_data.xlsx',header=None)\n",
         "\n",
-        "# Viewing first few rows of dataset\n",
         "soil_data"
       ]
     },
@@ -495,8 +508,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**4)** Eliminamos información que no sirve:\n",
+        "- Eliminamos filas 410 a 421\n",
+        "- Eliminamos filas 0 a 1\n",
+        "- Borramos columnas 0 a 9\n",
+        "\n",
+        "- Ahora crea nombres de columnas con sus respectivas unidades\n",
+        "\n",
+        "- Verifica que la canridad de atributos tengan la misma cantidad de columnas\n",
+        "\n",
+        "- Muestra la nueva tabla"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -661,6 +690,7 @@
         }
       ],
       "source": [
+        "#4\n",
         "# removing unnecessary columns and rows that do not contains data\n",
         "soil_data = soil_data.drop(np.arange(410,422),axis=0)\n",
         "soil_data = soil_data.drop([0,1],axis=0)\n",
@@ -685,8 +715,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**5)** Cotabiliza cuantos valores faltantes tiene cada columna del DataFrame llamado soil_data\n"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -722,12 +759,20 @@
         }
       ],
       "source": [
+        "#5\n",
         "soil_data.isna().sum()"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**6)** Todos los valores nulos del DataFrame soil_data son rellenados con el cero \"0\""
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1023,12 +1068,23 @@
         }
       ],
       "source": [
+        "#6\n",
         "soil_data.fillna(0)"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**7)** Se hace 3 cosas:\n",
+        "- Con imputer configura un objeto que va a rellenar los valores faltantes usando la media de cada columna.\n",
+        "- Reemplaza todos los valores nulos por el valor de la media de toda la columna\n",
+        "- Cuenta cantos valores nulos hay (se espera que cero)"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1046,6 +1102,7 @@
         }
       ],
       "source": [
+        "#7\n",
         "from numpy import nan\n",
         "from numpy import isnan\n",
         "from sklearn.impute import SimpleImputer\n",
