--- a/Soil_Fertility_Prediction.ipynb
+++ b/Soil_Fertility_Prediction.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "EHkgrJlA-fiJ"
       },
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -486,7 +486,7 @@
               "[422 rows x 25 columns]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -525,7 +525,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -684,7 +684,7 @@
               "4  0.1  1  4.7  0.5   0.1  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -723,7 +723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -753,7 +753,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -772,7 +772,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -786,7 +786,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_6447/2263177.py:1: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+            "/tmp/ipykernel_6447/3843613038.py:2: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
             "  soil_data.fillna(0)\n"
           ]
         },
@@ -1062,7 +1062,7 @@
               "[408 rows x 15 columns]"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1084,7 +1084,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1114,8 +1114,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**8)** Genera un nuevo DataFrame que ya no tiene valores nulos NULL y asigna nombres de columnas correctos y verifica los valores faltantes por columna. (Todos deberian dar cero)"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1145,12 +1152,13 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 28,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
+        "#8\n",
         "soil_data= pd.DataFrame(transformed_values,columns=column_names)\n",
         "soil_data.isna().sum()"
       ]
@@ -1165,19 +1173,34 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**9)** Guarda el DataFrame en un archivo CSV."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 29,
       "metadata": {
         "id": "NBRo6k_yZr5E"
       },
       "outputs": [],
       "source": [
+        "#9\n",
         "soil_data.to_csv(r'processed_data_set.csv', index=False)"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**10)** Devuelve el valor mínimo de la columna"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1210,14 +1233,22 @@
         }
       ],
       "source": [
+        "#10\n",
         "# printing minimum values for each column in the dataset\n",
         "min_values=soil_data.min()\n",
         "print(min_values)"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**11)** Devuelve el valor máximo de la columna"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1250,6 +1281,7 @@
         }
       ],
       "source": [
+        "#11\n",
         "# printing maximum values for each column in the dataset\n",
         "max_values=soil_data.max()\n",
         "print(max_values)"
@@ -1265,8 +1297,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**12)** Se importa la libreria seaborn y genera 3 tipos de gráficos (diagramas de dispersión)\n",
+        "- Considera la Vegetación y las filas 1 a 6\n",
+        "- Considera la Vegetación y las filas 6 a 11\n",
+        "- Considera la Vegetación y las filas 11 a 15\n",
+        "\n",
+        "Luego muestra una matriz de correlación con un mapa de calor en donde X y Y se relacionan entre si."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1312,7 +1356,7 @@
               "<Axes: >"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1328,6 +1372,7 @@
         }
       ],
       "source": [
+        "#12\n",
         "import seaborn as sns\n",
         "\n",
         "#pair plots\n",
@@ -1375,8 +1420,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**13)** Se guardan los datos de las columnas en X y datos de la Vegetación en Y y muestra una previsualizacion de los datos\n",
+        "\n",
+        "- Hace una normalización de los datos pasandolos a entre 0 y 1\n",
+        "- Muestra el registro normalizado de las 408 filas."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1446,6 +1501,7 @@
         }
       ],
       "source": [
+        "#13\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
@@ -1482,13 +1538,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**14)** Entrena al modelo y aplica metricas de desempeño para ver que tan bien funciona el modelo.\n",
+        "- Genera una predicción\n",
+        "- Evalua el error con la MSE, RMSE, MAE y R2\n",
+        "- Imprime el desempeño global del modelo"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 34,
       "metadata": {
         "id": "irT96MsqkeHr"
       },
       "outputs": [],
       "source": [
+        "#14\n",
         "from sklearn.metrics import r2_score\n",
         "\n",
         "def train(model, X, Y):\n",
@@ -1513,8 +1580,7 @@
         "    # R2 Score\n",
         "    print('R2 Score : ', r2_score(Y, y_pred))\n",
         "\n",
-        "    print('Accuracy : ',model.score(X,Y))\n",
-        "    "
+        "    print('Accuracy : ',model.score(X,Y))"
       ]
     },
     {
@@ -1527,8 +1593,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**15)** Hace una división de los datos de entrada, para que utilice solo el 90% para que el modelo se entrene, y el 10% los utilizara para probar el modelo"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1552,6 +1625,7 @@
         }
       ],
       "source": [
+        "#15\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "X_train, X_test, Y_train, Y_test = train_test_split(X,Y, test_size=0.10, random_state=43)\n",
@@ -1568,8 +1642,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**16)** Hace el modelo de regresión lineal\n",
+        "- procede a entrenar al modelo con el 90% de los datos\n",
+        "- Evalua al modelo con el 10% restante\n",
+        "- Guarda al modelo\n",
+        "- Indica sus parametros de error y presición"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
