--- a/ml-logistic-regression.ipynb
+++ b/ml-logistic-regression.ipynb
@@ -4,22 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Logistic regression](https://en.wikipedia.org/wiki/Logistic_regression) is similar to [linear regression](/blog/ml-linear-regression/), but instead of predicting a continuous output, classifies training examples by a set of categories or labels.  For example, linear regression on a set of social and economic data might be used to predict a person's income, but logistic regression could be used to predict whether that person was married, had children, or had ever been arrested.  In a basic sense, logistic regression only answers questions that have yes / no answers, or questions that can be answered with a 1 or 0.  However, it can easily be [extended](https://en.wikipedia.org/wiki/Multinomial_logistic_regression) to problems where there are a larger set of categories.\n",
+    "**1)** Se cargan las librerias:\n",
+    "- pandas: permite trabajar con tabla de datos y procesar archivos csv\n",
+    "- numpy: maneja arreglos numericos y calculos rápidos\n",
+    "- sklearn.preprocessing: Convierte etiquetas categoricas en valores binarios para usarla en un modelo de clasificacion\n",
     "\n",
-    "Here, I'm using the [Wine](https://archive.ics.uci.edu/ml/datasets/Wine) dataset from UCI. It maps thirteen continuous variables representing chemical contents of a wine to three labels, each a different winery in Italy.\n",
+    "Adicional lee un archivo tipo CSV\n",
     "\n",
-    "# Loading and Plotting Data\n",
-    " \n",
-    "Initially, I'm only using two features from the data set: alcohol and ash.  The labels are supplied as an array of data with values from `1` to `3`, but at first, I only want a simple regression problem with a yes or no answer.  \n",
+    "- Se queda con las filas donde class sea 1 o 2.\n",
     "\n",
-    "To do this, I first filter the data set, reducing it to only include wines with labels `1` or `2`.  Then, I use the scikit-learn `label_binarize` function, which takes an $m$-length list with $n$ possible values (two, in this case), and converts it to an $m \\times n$ matrix, where each column represents one label with a value of `1`, and all others with a value of `0`.  I choose the first column, though the second would be equally valid here, just with the labels reversed.\n",
+    "- Utiliza a las variables alchohol y ash como valores de entrada\n",
     "\n",
-    "I've provided a small example of `label_binarize` below, shuffling the whole input data set first (the examples are sorted by winery), and then selecting the first ten."
+    "- Convierte los valores en datos binarios (1 o 0)\n",
+    "\n",
+    "- Mezcla las clases y toma 10 valores, los mismos que se ven en la parte inferior"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -44,6 +47,7 @@
     }
    ],
    "source": [
+    "#1\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import label_binarize\n",
@@ -73,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -87,6 +91,7 @@
     }
    ],
    "source": [
+    "#2\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25)\n",
