--- a/ml-logistic-regression.ipynb
+++ b/ml-logistic-regression.ipynb
@@ -102,12 +102,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3)** Hace "
+    "**3)** importa la libreria matplotlib.pyplot la misma que nos va a permitir hacer gráficos\n",
+    "\n",
+    "- Define tipos de marcadores asi como colores\n",
+    "\n",
+    "- Establece a las variables X y Y los datos para un scatterplot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -124,6 +128,7 @@
     }
    ],
    "source": [
+    "#3\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
@@ -172,12 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "#4\n",
     "import numpy as np\n",
     "\n",
     "def sigmoid(X):\n",
