--- a/Soil_Fertility_Prediction.ipynb
+++ b/Soil_Fertility_Prediction.ipynb
@@ -13,6 +13,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "TRABAJO REALIZADO POR\n",
+        "\n",
+        "1) Cristhian Pozo\n",
+        "\n",
+        "2) Juan Torres\n",
+        "\n",
+        "\n",
         "**1)** Se va a instalar la librería openpyxl"
       ]
     },
