--- a/ml-logistic-regression.ipynb
+++ b/ml-logistic-regression.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TRABAJO REALIZADO POR\n",
+    "\n",
+    "1) Cristhian Pozo\n",
+    "\n",
+    "2) Juan Torres\n",
+    "\n",
+    "\n",
+    "\n",
     "**1)** Se cargan las librerias:\n",
     "- pandas: permite trabajar con tabla de datos y procesar archivos csv\n",
     "- numpy: maneja arreglos numericos y calculos rápidos\n",
@@ -176,6 +184,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4)** Importa la libreria numpy y definimos la FUNCIÓN SIGMOIDE la misma que ha a transformar los datos entre un rango enter 0 y 1\n",
+    "\n",
+    "- La función de costo (log loss) calacula el error del modelos para la regresión.\n",
+    "\n",
+    "- Tambien define a la variante gradiente la cual va a indicar la dirección a la cual se va a ajustar el parámetro."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -217,8 +236,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**5)** Importa la librería scipy.optimize la misma que va a encontrar parámetros óptimos.\n",
+    "\n",
+    "- define a la función train la misma que va a insertar el bias e inicializa los parámetros que llaman a fmin_tnc con el fin de minimizar la función de costo usando la gradiente.\n",
+    "\n",
+    "- llega a calcular los parámetros óptimos de la regresión logística y los llega a imprimir"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -284,6 +314,7 @@
     }
    ],
    "source": [
+    "#5\n",
     "from scipy.optimize import fmin_tnc  \n",
     "\n",
     "def train(X, y):\n",
@@ -310,8 +341,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**6)** Con sklearn.metrics, permite calcular la exactitud, presicion y recall para evaluar el modelo.\n",
+    "\n",
+    "- Define a la predicción y calcula la probabilidad de que el valor devuelva 1 o 0.\n",
+    "\n",
+    "- Convierte esa salida como predicciones binarias\n",
+    "\n",
+    "- Aplica el modelo entrenado a los datos de prueba y convierte ese resultado en un array.\n",
+    "\n",
+    "- Finalmente evalua e imprime los valores de predicciones correctas, cuando de esos son realemnte positivos y cuales fueron correctamente identificados"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -327,6 +373,7 @@
     }
    ],
    "source": [
+    "#6\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
     "\n",
     "def predict(X, theta):\n",
@@ -350,8 +397,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**7)** Con matplotlib nos permite usar colores y gradientes en el gráfico.\n",
+    "\n",
+    "- Establece una funcion lineal que define el límite del gráfico\n",
+    "\n",
+    "- Crea una grid o rejilla para el gráfico, esta tiene pasos de 200\n",
+    "\n",
+    "- Aplica la función PRED obteniendo la predicción de clase para cada punto.\n",
+    "\n",
+    "- Dibuja un límite que separa a los datos\n",
+    "\n",
+    "- Grafica los datos encontrados y la línea límite."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -368,6 +432,7 @@
     }
    ],
    "source": [
+    "#7\n",
     "from matplotlib import cm\n",
     "\n",
     "def plot_boundary(X, pred):\n",
